eoullim-Project/src/main/java/org/example/eoullimback/_common/error/exception/Exception400.java
package org.example.eoullimback._common.error.exception;

public class Exception400 extends RuntimeException {
    public Exception400(String msg) {
        super(msg);
    }

}
